--- a/Libiada.Database/Libiada.Context.tt
+++ b/Libiada.Database/Libiada.Context.tt
@@ -55,8 +55,8 @@ using System.Linq;
 
 <#=Accessibility.ForType(container)#> partial class <#=code.Escape(container)#> : DbContext
 {
-    public <#=code.Escape(container)#>()
-        : base("name=<#=container.Name#>")
+    public <#=code.Escape(container)#>(string connectionString)
+        : base(connectionString)
     {
 		Database.CommandTimeout = 1000000;
 <#
